2006-09-25  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/*.c (*_realize): Revert commit r6410 from 2006-09-18 as it's
	stupid.
	
2006-09-21  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkwidget.c (gtk_widget_tap_and_hold_setup,
	tap_and_hold_free_data): ref+sink and unref the menu instead of
	destroying it. Avoids crashing on showing the menu after a child
	widget has been removed from container.  NB#41002

2006-09-21  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkmenu.c (gtk_menu_popup): if no item is selected, select the
	first one. NB#4379

2006-09-21  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtktreeview.c (gtk_tree_view_bin_expose): Revert commit 154 as
	the graphics are improved and passive focus is clearly distinguishable
	from unselected. NB#22069

2006-09-21  Xan Lopez  <xan.lopez@nokia.com>

	* gtk/gtkstyle.c (draw_insertion_cursor): 
	Change the x coord of the cursor at line start so it's completely visible
	when we offset it. Fixes NB#38922.

2006-09-21  Kristian Rietveld  <kris@imendio.com>

	* gtk/gtktreeview.c (gtk_tree_view_class_init): enable original
	keybindings for Enter,
	(gtk_tree_view_key_press): for Enter, only handle the special
	cases, for the other cases we chain up to the parent class which
	will activate the original keybindings.
	NB#36935
	
2006-09-21  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkwidget.c: Restructure tap'n'hold (animation) code so that the
	animation is loaded only for the duration of tapping and holding.
	NB#22403

2006-09-21  Tommi Komulainen  <tommi.komulainen@nokia.com>

	Taken from GNOME CVS. NB#31766

    2005-08-20  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkrange.c (gtk_range_adjustment_changed)
	(gtk_range_adjustment_value_changed):  Don't queue a draw
	if the layout has not changed.  (#313991, Benjamin Berg)

2006-09-20  Tommi Komulainen  <tommi.komulainen@nokia.com>

	Taken from GNOME CVS. NB#18559
